<resources>
    <string name="app_name">Main_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Surname</string>
    <string name="nav_header_subtitle">name.surname@ug.bilkent.edu.tr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile">Profile</string>
</resources>