<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />

    </group>
</menu>